# staves

./: .gitignore  Dockerfile.builder  Dockerfile.builder-glibc  Dockerfile.builder-musl  Dockerfile.stage3  Dockerfile.x86_64-glibc  Dockerfile.x86_64-hardened-nomultilib  Dockerfile.x86_64-musl  README.md  ci.sh  create_rootfs.py  dev-requirements.in  dev-requirements.txt  digitalernachschub.xml  pyproject.toml  requirements.in  requirements.txt  staves.py  test_create_rootfs.py  test_staves.py  x86_64-glibc.toml  x86_64-hardened-nomultilib.toml  x86_64-musl.toml
laminar/: job.run
overlays/: ameto.xml
staves/: __main__.py  cli.py  core.py  types.py
staves/builders/: gentoo.py
staves/packagers/: config.py  docker.py
staves/runtimes/: core.py  docker.py
tests/: test_staves.py
